--- a/no1.html
+++ b/no1.html
@@ -17,7 +17,7 @@
       <a href="https://tenor.com/search/mochi-stickers">Mochi Stickers</a>
     </div>
     <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-    <h1>Please think again! 🙄</h1>
+    <h1>Please think again<span id="recipientName"></span>! 🙄</h1>
     <p>itni jaldi na matt bolo😥</p>
 
     <div class="btn">
@@ -25,6 +25,7 @@
       <a href="no2.html">No</a>
     </div>
   </div>
+  <script src="./script.js"></script>
 </body>
 
 </html>
