--- a/no2.html
+++ b/no2.html
@@ -1,5 +1,5 @@
-
-"<!DOCTYPE html>
+"
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -20,7 +20,7 @@
     </div>
     <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
 
-    <h1>Ek aur baar Soch lo! 😣</h1>
+    <h1>Ek aur baar Soch lo<span id="recipientName"></span>! 😣</h1>
     <p>kyu aisa kar rahi ho Pls Maan jao😣</p>
 
     <div class="btn">
@@ -28,6 +28,7 @@
       <a href="no3.html">No</a>
     </div>
   </div>
+  <script src="./script.js"></script>
 </body>
 
 </html>
