--- a/yes.html
+++ b/yes.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -19,8 +18,9 @@
         Cat GIF</a>from <a href="https://tenor.com/search/mochi-gifs">Mochi GIFs</a>
     </div>
     <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-    <h1>I knew it! You Love me a lot 😘</h1>
+    <h1>I knew it! You Love me a lot<span id="recipientName"></span> 😘</h1>
   </div>
+  <script src="./script.js"></script>
 </body>
 
 </html>
