--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <!-- Recipient Input -->
       <input type="text" id="recipientInput" placeholder="What is your name? (Your Name)" />
 
-      <button id="submitNameBtn">Create Proposal 🚀</button>
+      <button id="submitNameBtn">Unlock Surprise ✨</button>
     </div>
   </div>
 
