fix: make modal text mysterious to avoid spoilers

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <div id="nameModal" class="modal-overlay hidden">
     <div class="modal-content">
       <h2>Let's make this special! ✨</h2>
-      <p>I need two small details to create your perfect proposal:</p>
+      <h2 style="color: #d9a6a6; margin-bottom: 20px;">I need two small details to unlock your surprise:</h2>
 
       <!-- Sender Input -->
       <input type="text" id="senderInput" placeholder="Who sent this? (Sender's Name)" />
